<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/linear_layout_data_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/textview_view_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:layout_weight="0.5"
            android:text="@string/str_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/textview_view_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:layout_weight="0.5"
            android:text="@string/str_value"
            android:textColor="@color/black"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/textview_view_change"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:layout_weight="0.5"
            android:text="@string/str_change"
            android:textColor="@color/black"
            android:textSize="16sp"
            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layout_data_title"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/textview_no_data_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:padding="5dp"
        android:textSize="16sp"
        android:visibility="gone" />


    <TextView
        android:id="@+id/text_view_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBar"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/str_loading_data"
        android:textSize="16sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text_view_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_no_data_found"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/str_retry"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:visibility="gone" />




</RelativeLayout>