<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear_layout_data_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_view_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:layout_weight="0.5"
            android:text="@string/str_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/textview_view_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:layout_weight="0.5"
            android:text="@string/str_value"
            android:textColor="@color/black"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/textview_view_change"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:layout_weight="0.5"
            android:text="@string/str_change"
            android:textColor="@color/black"
            android:textSize="16sp"
            />
    </LinearLayout>


</RelativeLayout>