<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabBackground="@color/white"
        app:tabTextColor="@color/grey"
        app:tabSelectedTextColor="@color/colorAccent"
        app:tabIndicator="@color/colorAccent"
        app:tabIndicatorHeight="2dp"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/tab_layout"/>

    <LinearLayout
        android:id="@+id/linear_layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_pager"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_view_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:layout_weight="0.5"
            android:text="@string/str_view_one"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/textview_view_two"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:layout_weight="0.5"
            android:text="@string/str_view_two"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            />
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        android:layout_below="@+id/linear_layout_title"/>

    <LinearLayout
        android:id="@+id/linear_layout_data_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_view_name_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:layout_weight="0.5"
            android:text="@string/str_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/textview_view_value_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:layout_weight="0.5"
            android:text="@string/str_value"
            android:textColor="@color/black"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/textview_view_name_two"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:layout_weight="0.5"
            android:text="@string/str_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/textview_view_value_two"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:layout_weight="0.5"
            android:text="@string/str_value"
            android:textColor="@color/black"
            android:textSize="16sp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_layout_data_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layout_data_title"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_view_name_view_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:layout_weight="0.5"
            android:text="TCS"
            android:textColor="@color/black"
            android:textSize="14sp"
            />
        <TextView
            android:id="@+id/textview_view_value_view_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:layout_weight="0.5"
            android:text="18(3%)"
            android:textColor="@color/black"
            android:textSize="14sp"
            />
        <TextView
            android:id="@+id/textview_view_name_view_two"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:layout_weight="0.5"
            android:text="Tata Stell"
            android:textColor="@color/black"
            android:textSize="14sp"
            />
        <TextView
            android:id="@+id/textview_view_value_view_two"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:layout_weight="0.5"
            android:text="22(5%)"
            android:textColor="@color/black"
            android:textSize="14sp"
            />
    </LinearLayout>

</RelativeLayout>